--- a/package.json
+++ b/package.json
@@ -28,13 +28,23 @@
         "w3c-keyname": "^2.2.4"
     },
     "scripts": {
-        "watch": "shadow-cljs -A:edn-view:server watch",
-        "build": "shadow-cljs -A:edn-view:server release",
-        "server": "shadow-cljs -A:edn-view:server server",
-        "typescript": "tsc --watch",
-        "dev": "npm run typescript & npm run server"
+        "dev":          "yarn run css:watch &  yarn run ts:watch &  yarn run cljs:server",
+        "build":        "yarn run css:build && yarn run ts:build && yarn run cljs:compile",
+        "release":      "yarn run css:build && yarn run ts:build && yarn run cljs:release",
+        "cljs:watch":   "./node_modules/.bin/shadow-cljs watch :app",
+        "cljs:compile": "./node_modules/.bin/shadow-cljs compile :app",
+        "cljs:release": "./node_modules/.bin/shadow-cljs release :app",
+        "cljs:server":  "./node_modules/.bin/shadow-cljs server",
+        "ts:watch":     "./node_modules/.bin/tsc --watch",
+        "ts:build":     "./node_modules/.bin/tsc",
+        "css:build":    "NODE_ENV=production  ./node_modules/.bin/tailwind build -o ./resources/public/main.min.css",
+        "css:watch":    "NODE_ENV=development ./node_modules/.bin/postcss ./resources/public/main.css -o ./resources/public/main.min.css -w"
     },
     "devDependencies": {
+        "autoprefixer": "^10.2.5",
+        "postcss": "^8.2.13",
+        "postcss-cli": "^8.3.1",
+        "tailwindcss": "^2.1.2",
         "typescript": "^4.2.4"
     }
 }
