--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@codemirror/state": "^0.18.0",
         "@codemirror/tooltip": "^0.18.4",
         "@codemirror/view": "^0.18.0",
+        "create-react-class": "15.6.3",
         "lezer": "^0.13.1",
         "lezer-clojure": "0.1.10",
         "lezer-generator": "^0.13.0",
@@ -28,20 +29,22 @@
         "w3c-keyname": "^2.2.4"
     },
     "scripts": {
-        "dev":          "yarn run css:watch &  yarn run ts:watch &  yarn run cljs:server",
-        "build":        "yarn run css:build && yarn run ts:build && yarn run cljs:compile",
-        "release":      "yarn run css:build && yarn run ts:build && yarn run cljs:release",
-        "cljs:watch":   "./node_modules/.bin/shadow-cljs watch :app",
+        "dev": "yarn run css:watch &  yarn run ts:watch &  yarn run cljs:server",
+        "build": "yarn run css:build && yarn run ts:build && yarn run cljs:compile",
+        "release": "yarn run css:build && yarn run ts:build && yarn run cljs:release",
+        "cljs:watch": "./node_modules/.bin/shadow-cljs watch :app",
         "cljs:compile": "./node_modules/.bin/shadow-cljs compile :app",
         "cljs:release": "./node_modules/.bin/shadow-cljs release :app",
-        "cljs:server":  "./node_modules/.bin/shadow-cljs server",
-        "ts:watch":     "./node_modules/.bin/tsc --watch",
-        "ts:build":     "./node_modules/.bin/tsc",
-        "css:build":    "NODE_ENV=production  ./node_modules/.bin/postcss ./resources/public/main.css -o ./resources/public/main.min.css",
-        "css:watch":    "NODE_ENV=development ./node_modules/.bin/postcss ./resources/public/main.css -o ./resources/public/main.min.css -w"
+        "cljs:server": "./node_modules/.bin/shadow-cljs server",
+        "ts:watch": "./node_modules/.bin/tsc --watch",
+        "ts:build": "./node_modules/.bin/tsc",
+        "css:build": "NODE_ENV=production  ./node_modules/.bin/postcss ./resources/public/main.css -o ./resources/public/main.min.css",
+        "css:watch": "NODE_ENV=development ./node_modules/.bin/postcss ./resources/public/main.css -o ./resources/public/main.min.css -w"
     },
     "devDependencies": {
         "autoprefixer": "^10.2.5",
+        "highlight.js": "^11.2.0",
+        "marked": "^2.1.3",
         "postcss": "^8.2.13",
         "postcss-cli": "^8.3.1",
         "tailwindcss": "^2.1.2",
