--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,19 @@
-.idea
+.DS_Store
 .cpcache
-/out
-/.nrepl-port
+.idea
 .shadow-cljs
+/.clj-kondo/.cache
+/.lsp
+/.nrepl-port
+/out
+/resources/public/*.min.css
 /resources/public/edn_view/js/cljs-runtime
 /resources/public/edn_view/js/main.js
 /resources/public/edn_view/js/manifest.edn
-node_modules
-tsconfig.tsbuildinfo
-src/**/*.js
-/resources/public/js/
-/resources/public/*.min.css
-/.lsp
-/resources/public/photon/js/
 /resources/public/examples/js/
-.DS_Store
+/resources/public/js/
+/resources/public/photon/js/
+node_modules
+src/**/*.js
+target/
+tsconfig.tsbuildinfo
