--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "vendor/cloroutine"]
 	path = vendor/cloroutine
 	url = git@github.com:leonoel/cloroutine.git
+	ignore = dirty
 [submodule "vendor/rcf"]
 	path = vendor/rcf
 	url = git@github.com:hyperfiddle/minitest.git
+	ignore = dirty
 [submodule "vendor/missionary"]
 	path = vendor/missionary
 	url = git@github.com:leonoel/missionary.git
+	ignore = dirty
