--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,74 +4,94 @@ jobs:
   photon-jvm:
     runs-on: [ubuntu-latest]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          submodules: 'recursive'
+    - uses: actions/checkout@v2
+      with:
+        submodules: 'recursive'
 
-      - name: Assert submodules
-        run: ls vendor
+    - run: git status && ls vendor
 
-      - name: Prepare java
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+    - run: sudo apt update && sudo apt install maven -y
+    
+    - uses: actions/setup-java@v2
+      with:
+        distribution: 'temurin'
+        java-version: '11'
 
-      - name: Install clojure tools
-        uses: DeLaGuardo/setup-clojure@3.4
-        with:
-          cli: 1.10.1.727
+    - name: Cache local Maven repository
+      uses: actions/cache@v2
+      with:
+         path: ~/.m2/repository
+         key: ${{ runner.os }}-maven-${{ hashFiles('**/deps.edn') }}
+         restore-keys: |
+           ${{ runner.os }}-maven-
+    
+    - run: mvn --version
 
-      - name: Cache local Maven repository
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/deps.edn') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+    - name: Set Missionary version to b.27
+      run: mvn versions:set -DnewVersion=b.27-SNAPSHOT --file vendor/missionary/pom.xml
 
-      - name: prep
-        run: clojure -A:test -P
-        shell: bash
+    - name: Install Missionary from submodule
+      run: mvn -B --file vendor/missionary/pom.xml clean compile install
 
-      - name: Run tests
-        run: clojure -X:test :dirs "[\"src\" \"src-docs\"]" :patterns "[\"hyperfiddle.photon-impl.compiler\" \"hyperfiddle.photon-impl.for\" \"user.lang\"]"
-        # run: clojure -X:test :dirs "[\"src\" \"src-docs\"]" :patterns "[\"hfdl.impl.compiler\" \"hfdl.lib\" \"user.lang\"]"
-        # run: clojure -X:test-clj :dirs "[\"src\" \"src-docs\"]" :patterns "[\"hfdl.impl.compiler\" ]"
-        shell: bash
+    - name: Install clojure tools
+      uses: DeLaGuardo/setup-clojure@3.4
+      with:
+        cli: 1.10.1.727
+ 
+    - name: prep
+      run: clojure -A:test -P
+
+    - name: Run tests
+      run: clojure -X:test :dirs "[\"src\" \"src-docs\"]" :patterns "[\"hyperfiddle.photon-impl.compiler\" \"hyperfiddle.photon-impl.for\" \"user.lang\"]"
         
   photon-nodejs:
+    if: ${{ false }} # Disabled until we fix the cljs test suite locally
     runs-on: [ubuntu-latest]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          submodules: 'recursive'
+    - uses: actions/checkout@v2
+      with:
+        submodules: 'recursive'
 
-      - name: Assert submodules
-        run: ls vendor
+    - run: git status && ls vendor
 
-      - name: Prepare java
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+    - run: apt update && apt install maven -y
+    
+    - uses: actions/setup-java@v2
+      with:
+        distribution: 'temurin'
+        java-version: '11'
 
-      - name: Install clojure tools
-        uses: DeLaGuardo/setup-clojure@3.4
-        with:
-          cli: 1.10.1.727
+    - name: Cache local Maven repository
+      uses: actions/cache@v2
+      with:
+         path: ~/.m2/repository
+         key: ${{ runner.os }}-maven-${{ hashFiles('**/deps.edn') }}
+         restore-keys: |
+           ${{ runner.os }}-maven-
+    
+    - run: mvn --version
 
-      - name: Use Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14.x
+    - name: Install Missionary from submodule
+      run: mvn -B --file vendor/missionary/pom.xml clean compile install
 
-      - name: Install Shadow
-        run: npm install shadow-cljs
+    - name: Install clojure tools
+      uses: DeLaGuardo/setup-clojure@3.4
+      with:
+        cli: 1.10.1.727
+ 
+    - name: prep
+      run: clojure -A:test -P
 
-      - name: Compile Tests
-        run: ./node_modules/.bin/shadow-cljs -A:test compile :test
+    - name: Use Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: 14.x
 
-      - name: Run Tests
-        run: node out/node-tests.js
+    - name: Install Shadow
+      run: npm install shadow-cljs
 
+    - name: Compile Tests
+      run: ./node_modules/.bin/shadow-cljs -A:test compile :test
+
+    - name: Run Tests
+      run: node out/node-tests.js
