--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,7 +42,7 @@ jobs:
       run: clojure -A:test -P
 
     - name: Run tests
-      run: clojure -X:test :dirs "[\"src\" \"src-docs\" \"test\"]" :patterns "[\"hyperfiddle.photon-impl.*\" \"hyperfiddle.photon-test\"]"
+      run: ./ci/run_tests_jvm.sh
         
   photon-nodejs:
     # if: ${{ false }} # Disabled until we fix the cljs test suite locally
@@ -93,8 +93,5 @@ jobs:
     - name: Install Shadow
       run: npm install shadow-cljs
 
-    - name: Compile Tests
-      run: ./node_modules/.bin/shadow-cljs -A:test compile :test
-
     - name: Run Tests
-      run: node out/node-tests.js
+      run: ./ci/run_tests_node.sh
