--- a/package.json
+++ b/package.json
@@ -48,6 +48,11 @@
         "postcss": "^8.2.13",
         "postcss-cli": "^8.3.1",
         "tailwindcss": "^2.1.2",
-        "typescript": "^4.2.4"
+        "typescript": "^4.2.4",
+        "karma": "6.3.17",
+        "karma-chrome-launcher": "3.1.1",
+        "karma-cljs-test": "0.1.0",
+        "puppeteer": "13.5.2",
+        "shadow-cljs": "2.16.4"
     }
 }
