run npm install in CI

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -90,6 +90,9 @@ jobs:
       with:
         node-version: 14.x
 
+    - name: NPM install
+      run: npm install
+
     - name: Install Shadow
       run: npm install shadow-cljs
 
