rename rcf gitmodule coordinate

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "vendor/rcf"]
 	path = vendor/rcf
-	url = git@github.com:hyperfiddle/minitest.git
+	url = git@github.com:hyperfiddle/rcf.git
 	ignore = dirty
 [submodule "vendor/missionary"]
 	path = vendor/missionary
