Cleanup js ecosystem files

--- a/package.json
+++ b/package.json
@@ -14,42 +14,10 @@
         "@codemirror/rectangular-selection": "^0.18.0",
         "@codemirror/search": "^0.18.0",
         "@codemirror/state": "^0.18.0",
-        "@codemirror/tooltip": "^0.18.4",
         "@codemirror/view": "^0.18.0",
-        "create-react-class": "15.6.3",
-        "lezer": "^0.13.1",
-        "lezer-clojure": "0.1.10",
-        "lezer-generator": "^0.13.0",
-        "lezer-tree": "^0.13.0",
-        "platform": "1.3.5",
-        "react": "17.0.1",
-        "react-dom": "17.0.1",
-        "reconnecting-websocket": "4.4.0",
-        "shadow-cljs": "^2.14.1",
-        "stacktrace-js": "^2.0.2",
-        "w3c-keyname": "^2.2.4"
-    },
-    "scripts": {
-        "dev": "yarn run css:watch &  yarn run ts:watch &  yarn run cljs:server",
-        "build": "yarn run css:build && yarn run ts:build && yarn run cljs:compile",
-        "release": "yarn run css:build && yarn run ts:build && yarn run cljs:release",
-        "cljs:watch": "./node_modules/.bin/shadow-cljs watch :app",
-        "cljs:compile": "./node_modules/.bin/shadow-cljs compile :app",
-        "cljs:release": "./node_modules/.bin/shadow-cljs release :app",
-        "cljs:server": "./node_modules/.bin/shadow-cljs server",
-        "ts:watch": "./node_modules/.bin/tsc --watch",
-        "ts:build": "./node_modules/.bin/tsc",
-        "css:build": "NODE_ENV=production  ./node_modules/.bin/postcss ./resources/public/main.css -o ./resources/public/main.min.css",
-        "css:watch": "NODE_ENV=development ./node_modules/.bin/postcss ./resources/public/main.css -o ./resources/public/main.min.css -w"
+        "lezer-clojure": "0.1.10"
     },
     "devDependencies": {
-        "autoprefixer": "^10.2.5",
-        "highlight.js": "^11.2.0",
-        "marked": "^2.1.3",
-        "postcss": "^8.2.13",
-        "postcss-cli": "^8.3.1",
-        "tailwindcss": "^2.1.2",
-        "typescript": "^4.2.4",
         "karma": "6.3.17",
         "karma-chrome-launcher": "3.1.1",
         "karma-cljs-test": "0.1.0",
