Set ci job timeout to 5 minutes
Some CI builds did hang and ran for the default github timeout of 6 hours, next
builds were enqueued. Happened on May 6, May 11, May 31 and twice on June 15,
2022.

Eyeballing reported build over the last 3 months gives us a rough average of
2m30s. The biggest outlier is at 4m30s.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,6 +3,7 @@ on: [push]
 jobs:
   photon-jvm:
     runs-on: [ubuntu-latest]
+    timeout-minutes: 5
     steps:
     - uses: actions/checkout@v2
       with:
@@ -50,6 +51,7 @@ jobs:
   photon-nodejs:
     # if: ${{ false }} # Disabled until we fix the cljs test suite locally
     runs-on: [ubuntu-latest]
+    timeout-minutes: 5
     steps:
     - uses: actions/checkout@v2
       with:
