ci: run tests on all branches and PRs

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,9 @@
 name: Photon Test Suite
-on: [push]
+on:
+  push:
+    branches:
+      - "**"
+  pull_request:
 jobs:
   jvm:
     runs-on: [ubuntu-latest]
